# document_classification

./: .env.example  .gitignore  README.md  fasttext_demo.py  llm_demo.py  logger.py  main.py  pyproject.toml  slm_demo.py  todo.md
.github/workflows/: python-publish.yml
common/parsers/: default_parser.py  interfaces.py  layout_preserving_formatter.py  parse_and_format.py
common/schemas/: bounding_box.py
common/utils/: dataframe_to_text.py  json_to_ocr_text.py
demo/: fasttext_demo.py  slm_demo.py
document_classification/common/parsers/: config.py  default_parser.py  layout_preserving_formatter.py
document_classification/common/schemas/: document.py  line.py  word.py
document_classification/common/tests/: conftest.py
document_classification/common/tests/fixtures/: __init__.py  ocr_df.py  words.py
document_classification/llm/: classifier.py  evaluation.py  inference.py  rebuild_classification_schema.py
document_classification/llm/schemas/: document_classification.py
examples/: fasttext_demo.py  llm_demo.py  slm_demo.py
fasttext_model/evaluate/: evaluate.py
fasttext_model/inference/: __init__.py  infer.py
fasttext_model/predictor/: predictor.py
fasttext_model/train/: create_dataset.py
language_model/: __init__.py  config.py  create_dataset.py  finetune.py  ocr_dataset.py  predict.py  predictor.py  slm_model.py  tokenizer.py  trainer.py
language_model/dataset_preparer/: base.py  custom_collate_function.py  text_only.py  text_with_bbox.py
language_model/schemas/: ocr_with_bbox_dataset.py  slm_model.py
language_model/tokenizers/: text.py  text_with_layout.py
llm/: config.py  evaluation.py  get_rebuilt_models.py  inference.py
ocr/: __init__.py  base.py  factory.py
ocr/exceptions/: ocr_processing_error.py
ocr/open_source/: __init__.py  paddle.py  tesseract.py
ocr/providers/closed_source/google_vision/: ocr.py  (+2 more)
ocr/providers/open_source/: paddle.py  tesseract.py
ocr/readers/: file_reader.py  pdf_reader.py
ocr/schemas/: ocr_result.py
(+1 files in other folders)
